Remove RS3 panel styling and fix preset name checks (#25)